<resources>
    <string name="app_name">Show Me App</string>
    <string name="genres">Genres</string>
    <string name="a_collection_of_your_favorite_genres">A Collection of Your Favorite Genres</string>
    <string name="actors">Actors</string>
    <string name="a_collection_of_your_favorite_actors">A Collection of Your Favorite Actors</string>

    <!-- API KEY NEEDED STRINGS -->
    <string name="action_settings">Settings</string>
    <string name="name_movie">Movie Title</string>
    <string name="movie_details">Movie Details</string>
    <string name="description_title">Description</string>
    <string name="rating">User Rating</string>
    <string name="release">Release Date</string>
</resources>
