<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/viewBG"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.thebinarytrio.showmeapp.api_DetailActivity"
    tools:showIn="@layout/api_movie_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/movietitle"
                android:text="@string/name_movie"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginStart="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:layout_marginStart="10dp"
                android:padding="3dp"
                android:layout_marginTop="3dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description_title"
                android:layout_marginStart="10dp"
                android:text="@string/description_title"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="25sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                android:padding="3dp"
                android:layout_marginTop="3dp"
                android:textSize="20sp"
                android:layout_marginStart="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rating"
                android:layout_marginStart="10dp"
                android:text="@string/rating"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userrating"
                android:layout_marginStart="10dp"
                android:padding="3dp"
                android:layout_marginTop="3dp"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/release"
                android:layout_marginStart="10dp"
                android:text="@string/release"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/releasedate"
                android:layout_marginStart="10dp"
                android:padding="3dp"
                android:layout_marginTop="3dp"
                android:textSize="20sp"
                />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>